[gd_scene load_steps=4 format=3 uid="uid://xaa88mf20pod"]

[ext_resource type="Script" path="res://scenes/Level/Level.gd" id="1_8p3qr"]
[ext_resource type="MeshLibrary" uid="uid://bskia543vtmsl" path="res://assets/mesh_libraries/PrototypeMeshLibrary.tres" id="1_av58u"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vkjm8"]
height = 0.0877467
radius = 0.0847005

[node name="Level" type="Node3D"]
script = ExtResource("1_8p3qr")

[node name="Map" type="GridMap" parent="."]
mesh_library = ExtResource("1_av58u")
cell_size = Vector3(0.6, 0.3, 0.6)
data = {
"cells": PackedInt32Array(1, 1, 655366, 0, 1, 0, 65535, 1, 1, 65534, 1, 0, 65534, 0, 0, 65534, 65535, 0, 65534, 65534, 0, 65535, 65534, 1, 0, 65534, 655361, 1, 65534, 655366, 1, 65535, 1441793, 1, 0, 1441792, 0, 0, 1048576, 65535, 0, 1, 65535, 65535, 1, 0, 65535, 1441794, 65533, 1, 1, 65533, 0, 1, 65533, 65535, 1, 65533, 65534, 1, 65534, 2, 1048577, 65535, 2, 1048577, 0, 2, 1048577, 65534, 65533, 1441793, 65535, 65533, 2, 0, 65533, 1441793, 2, 1, 655361, 2, 0, 655361, 2, 65535, 1441794, 2, 65534, 655361, 2, 2, 655362, 1, 2, 1048577, 65533, 2, 1048578, 65533, 65533, 2, 1, 65533, 1441793, 2, 65533, 1441794)
}

[node name="FinishTimer" type="Timer" parent="."]

[node name="StartPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.254446, 0.548824)

[node name="FinishArea" type="Area3D" parent="."]

[node name="CollisionShape" type="CollisionShape3D" parent="FinishArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.89754, 0.170244, 0.895597)
shape = SubResource("CylinderShape3D_vkjm8")
